@startuml
title Toggle Public Facade Structure
skinparam packageStyle rectangle
skinparam shadowing false

interface Control
class Toggle
class ToggleModel
class ToggleViewModel
class ToggleView
class ToggleInputAdapter
class ToggleViewState
class ParametricToggleStyle
class ToggleRenderStyle
interface ThemeProvider
class ThemeSnapshot

Toggle ..|> Control
Toggle --> ToggleModel : owns
Toggle --> ToggleViewModel : owns
Toggle --> ToggleView : owns
Toggle --> ToggleInputAdapter : delegates input
ToggleInputAdapter --> ToggleView : geometry / hit testing
ToggleInputAdapter --> ToggleViewModel : interaction updates
ToggleViewModel --> ToggleModel : updates
ToggleView --> ToggleViewModel : reads
ToggleView --> ToggleViewState : builds
ToggleView --> ParametricToggleStyle : renders with
ParametricToggleStyle --> ThemeProvider : reads snapshot
ThemeProvider --> ThemeSnapshot
ParametricToggleStyle --> ToggleViewState : resolves
ParametricToggleStyle --> ToggleRenderStyle : creates
@enduml
